Issue #2694691 by Grimreaper: RTE wrapper wrong height when no filter format select list

--- a/starterkits/less/less/component/filter.less
+++ b/starterkits/less/less/component/filter.less
@@ -11,6 +11,7 @@
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
   margin-bottom: @line-height-computed;
   padding: 10px;
+  height: 51px;
   &:extend(.clearfix all);
 }
 .filter-help {
